--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,16 @@
 <resources>
-  <string name="app_name">How Market</string>
+    <string name="app_name">How Market</string>
 
-  <!-- TODO: Remove or change this placeholder text -->
-  <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
-  <string name="error_empty_input">Inputs may not be Empty</string>
-  <string name="error_invalid_email">Email not valid</string>
-  <string name="error_password_too_long">Password too long</string>
+    <string name="error_empty_input">Inputs may not be Empty</string>
+    <string name="error_invalid_email">Email not valid</string>
+    <string name="error_password_too_long">Password too long</string>
+    <string name="title_activity_room_main">RoomMainActivity</string>
+
+    <string name="hint_word">Word...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
+
 </resources>
